# tai

./: .envrc  .gitignore  .gitmodules  4090modelservice.md  CLAUDE.md  How-to-use-claude-code.md  Makefile  OpenOrca.py  README.md  Rag.py  environment.yaml  links.txt  mac_requirements.txt  openai_integration_issues.md  output_chunks.pkl  output_tree.txt  pyproject.toml  tai.code-workspace  test.py
ai_chatbot_backend/: .env.example  .envrc  .gitignore  Makefile  README.md  course.json.example  main.py  main_minimal.py  metadata.db  pyproject.toml  pytest.ini  test_generate_pages.py
ai_chatbot_backend/app/: config.py
ai_chatbot_backend/app/admin/: __init__.py  admin.py
ai_chatbot_backend/app/api/: deps.py  router.py
ai_chatbot_backend/app/core/: database.py  db_initializer.py  mongodb_client.py
ai_chatbot_backend/app/dependencies/: model.py  openai_model.py  remote_model.py
ai_chatbot_backend/app/schemas/: completion.py  course.py  file_metadata.py  files.py  modules.py  practice.py  problem.py
ai_chatbot_backend/app/services/: async_embed_engine.py  audio_service.py  chat_service.py  courses_service.py  file_metadata_service.py  file_service.py  memory_synopsis_service.py  module_service.py  practice_service.py  problem_service.py  rag_generation.py  rag_postprocess.py  rag_preprocess.py  rag_retriever.py  rag_selector.py  request_timer.py
ai_chatbot_backend/app/utils/: path_validation.py  stream_processing.py
ai_chatbot_backend/config/: database_mapping.json
ai_chatbot_backend/docs/: api-files-modules.md  local-deployment-guide.md  vllm-setup.md
ai_chatbot_backend/scripts/: export_sqlite_data.py  generate_fixtures.py  initialize_db_and_files.py  initialize_storage.py  insert_test_file_metadata_and_problems.py  seed_mongodb.py  start_vllm_servers.sh  stop_vllm_servers.sh
ai_chatbot_backend/temp/F1_racing/: add_html_extension.sh
ai_chatbot_backend/templates/: file_tester.html
ai_chatbot_backend/tests/: concurrent_call.py  conftest.py  test_fixtures.py  utils.py
ai_chatbot_backend/tests/fixtures/: README.md
ai_chatbot_backend/tests/unit_tests/: conftest.py  test_openai_format.py
ai_course_bot/ai_chatbot_backend/: .env.example  .gitignore  Makefile  README.md  example_cc.txt  main.py  pyproject.toml  requirements.txt  test_auth.py
ai_course_bot/ai_chatbot_backend/app/: config.py
ai_course_bot/ai_chatbot_backend/docs/: FILES_API.md  README.md  authentication_setup.md  local_file_api.md  local_files_api.md
ai_course_bot/ai_chatbot_backend/postman/: local_file_postman_collection.json
ai_course_bot/ai_chatbot_backend/scripts/: enhanced_generate_local_file_postman_collection.py  generate_admin_token.py  generate_fixtures.py  initialize_db_and_files.py  initialize_storage.py  migrate_to_modern_files.py
evaluation/dataset_generate/: Makefile  README.md  analyze.py  generate.py  pyproject.toml  requirements.txt
rag/: .envrc  .gitignore  EE106A_Lab1_ROS.md  EE106A_Lab1_ROS.tex  Makefile  README.md  augmented_generation_test.py  bge.py  chat_complete_ans.py  cosine_chat.py  count  current_env.txt  demo.py  embedding_create.py  example.env  guess.py  jina.py  mem_test.py  multi_step.py  output_wizard.txt  output_zephyr.txt  output_zephyr_short.txt  pandoc.py  pipeline_to_kb.py  pyproject.toml  question_generator.py  read_tei.py  requirements-base.txt  requirements-extend.txt  requirements.txt  reranker.py  retrieval_test.py  scores_and_feedback.py  seperate_by_token.py  soup.md  srf.py  store.py  task.py  test.py  zephyr.py
rag/.claude/: settings.local.json
rag/Testing/: retrieval_test.py
rag/documents/: EECS106A_textbook.txt
rag/file_conversion_router/: CLAUDE.md  README.md  api.py  config.py  config.yaml  database_create.py  embedding_create.py  extract_video_segment.py  file_embedding_service.py  markdown_file_embedder.py  metadata_to_page.py  new_embedding_create.py  page_create.py  professor_audio_config.yaml  test.py  titile_test.py
rag/file_organizer/: Makefile  README.md  config.yaml  course_config_sample.yaml  models.yaml  pyproject.toml  requirements.txt
rag/log/: 10-20_00-32_to_task_local_page.txt  10-24_19-39_to_task_local_page.txt  10-24_22-02_to_task_local_multi.txt  10-24_22-02_to_task_local_seg.txt  10-24_23-09_to_task_local_multi.txt  10-24_23-09_to_task_local_seg.txt  10-25_02-12_to_task_local_seg.txt  10-25_02-45_to_task_local_page.txt  10-25_03-04_to_task_local_seg.txt  10-25_20-26_to_task_local_page.txt  10-27_00-09_to_doc_local_page.txt  10-27_00-12_to_doc_local_multi.txt  10-27_00-12_to_doc_local_seg.txt  10-27_00-17_to_task_openai_page.txt  10-27_00-17_to_task_openai_seg.txt  10-27_00-33_to_doc_openai_multi.txt  10-27_00-33_to_doc_openai_page.txt  10-27_00-33_to_doc_openai_seg.txt  10-27_01-04_to_doc_openai_multi.txt  10-27_01-04_to_doc_openai_page.txt  10-27_01-04_to_doc_openai_seg.txt  10-27_03-57_none_local_multi.txt  10-27_03-57_none_local_page.txt  10-27_03-58_none_none_local_seg.txt  10-27_14-22_none_none_openai_page.txt  10-27_14-22_none_none_openai_seg.txt  10-27_14-37_seperate_paragraph_none_local_multi.txt  10-27_14-37_seperate_paragraph_none_local_page.txt  10-27_14-37_seperate_paragraph_none_local_seg.txt  10-27_14-47_seperate_paragraph_none_openai_multi.txt  10-27_14-47_seperate_paragraph_none_openai_page.txt  10-27_14-47_seperate_paragraph_none_openai_seg.txt  10-30_20-54_none_sum_local_page.txt  10-30_20-54_none_sum_local_seg.txt  10-30_21-10_none_none_local_multi.txt  10-30_21-10_none_none_local_page.txt  10-30_21-10_none_none_local_seg.txt  10-31_00-57_bullet_none_openai_multi.txt  10-31_00-57_bullet_none_openai_page.txt  10-31_00-57_bullet_none_openai_seg.txt  (+131 more)
rag/question_set/: data_0.pkl  data_1.pkl  data_10.pkl  data_11.pkl  data_12.pkl  data_2.pkl  data_3.pkl  data_4.pkl  data_5.pkl  data_6.pkl  data_7.pkl  data_8.pkl  data_9.pkl
rag/scraper/: README.md  config.yaml
rag/test/: conftest.py  test_api.py
rag/tests/: ed_parse.py  embedding_create.py  evaluation.py  llm_as_judge.py  question_generation.py  question_generator.py  questions_context.csv  retrieval_test.py  test.py  utils.py
(+5263 files in other folders)
