[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for document processing, embedding generation, and file conversion"
authors = ["TAI Team"]
readme = "README.md"
packages = [{include = "file_conversion_router"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core dependencies
numpy = "^1.26.4"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

# ML Core (always needed)
torch = "^2.3.0"
transformers = "^4.42.4"
sentence-transformers = "^3.1.1"
huggingface-hub = "^0.33.0"
safetensors = "^0.5.0"
tokenizers = "^0.19.1"

# Embedding models
FlagEmbedding = "^1.2.9"
mteb = "^1.26.4"

# Document processing core
PyMuPDF = "^1.24.14"
python-docx = "^1.1.2"
openpyxl = "^3.1.5"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"

# Basic image processing
Pillow = "^11.1.0"

# Utilities
tqdm = "^4.66.2"
requests = "^2.32.3"
aiohttp = "^3.11.11"
click = "^8.1.7"
rich = "^13.9.4"
loguru = "^0.7.3"

# Configuration and data
PyYAML = "^6.0.1"
toml = "^0.10.2"
jsonschema = "^4.19.0"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
# Development tools
pytest = "^8.1.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^24.10.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
ipython = "^8.0.0"

[tool.poetry.group.cv.dependencies]
# Computer Vision packages
opencv-python = "^4.6.0.66"
opencv-contrib-python = "^4.6.0.66"
albumentations = "^1.4.11"
scikit-image = "^0.25.0"
imageio = "^2.36.1"
matplotlib = "^3.10.0"

[tool.poetry.group.ocr.dependencies]
# OCR and advanced document processing (optional - heavy dependencies)
# Note: Some packages have complex version conflicts, install individually as needed
paddleocr = {version = "^2.7.3", python = ">=3.10,<3.13", optional = true}
rapidocr-onnxruntime = {version = "^1.3.25", optional = true}
pix2text = {version = "^1.1.1", python = ">=3.10,<3.13", optional = true}

[tool.poetry.group.ml-heavy.dependencies]
# Heavy ML packages (optional for performance)
accelerate = "^1.2.1"
optimum = "^1.23.3"
onnx = "^1.17.0"
onnxruntime = "^1.20.1"
einops = "^0.8.0"
timm = "^0.9.16"

[tool.poetry.group.ml-training.dependencies]
# Training and fine-tuning
pytorch-lightning = "^2.5.0"
wandb = "^0.19.1"
tensorboard = "^2.18.0"
datasets = "^2.19.1"
evaluate = "^0.4.3"

[tool.poetry.group.scientific.dependencies]
# Scientific computing
scipy = "^1.15.0"
scikit-learn = "^1.6.0"
numba = "^0.60.0"
sympy = "^1.13.3"

[tool.poetry.group.nlp.dependencies]
# NLP specific packages
nltk = "^3.9.1"
spacy = "^3.7.0"
regex = "^2024.11.6"
rapidfuzz = "^3.11.0"
langdetect = "^1.0.9"
ftfy = "^6.3.1"

[tool.poetry.group.video.dependencies]
# Video and multimedia processing
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
imageio-ffmpeg = "^0.5.1"
scenedetect = "^0.6.3"
opencv-python-headless = "^4.10.0.84"

[tool.poetry.group.web.dependencies]
# Web scraping and HTTP
playwright = "^1.40.0"
selenium = "^4.15.0"
httpx = "^0.28.1"
aiolimiter = "^1.2.1"

[tool.poetry.group.formats.dependencies]
# Additional format support
python-pptx = "^0.6.23"
easyocr = "^1.7.0"
pdf2docx = "^0.5.8"
pypdf = "^5.1.0"
pypdfium2 = "^4.30.1"
rarfile = "^4.2"

[tool.poetry.extras]
# Optional installation groups
cv = ["opencv-python", "opencv-contrib-python", "albumentations", "scikit-image", "imageio", "matplotlib"]
ocr = ["paddleocr", "rapidocr-onnxruntime", "pix2text"]
ml-heavy = ["accelerate", "optimum", "onnx", "onnxruntime", "einops", "timm"]
ml-training = ["pytorch-lightning", "wandb", "tensorboard", "datasets", "evaluate"]
scientific = ["scipy", "scikit-learn", "numba", "sympy"]
nlp = ["nltk", "spacy", "regex", "rapidfuzz", "langdetect", "ftfy"]
video = ["moviepy", "ffmpeg-python", "imageio-ffmpeg", "scenedetect", "opencv-python-headless"]
web = ["playwright", "selenium", "httpx", "aiolimiter"]
formats = ["python-pptx", "easyocr", "pdf2docx", "pypdf", "pypdfium2", "rarfile"]
full = [
    "opencv-python", "opencv-contrib-python", "albumentations", "scikit-image", "imageio", "matplotlib",
    "magic-pdf", "paddleocr", "rapidocr-onnxruntime", "rapidocr-paddle", "pix2text", "cnocr", "cnstd", "unimernet",
    "accelerate", "optimum", "onnx", "onnxruntime", "einops", "timm",
    "pytorch-lightning", "wandb", "tensorboard", "datasets", "evaluate",
    "scipy", "scikit-learn", "numba", "sympy",
    "nltk", "spacy", "regex", "rapidfuzz", "langdetect", "ftfy",
    "moviepy", "ffmpeg-python", "imageio-ffmpeg", "scenedetect", "opencv-python-headless",
    "playwright", "selenium", "httpx", "aiolimiter",
    "python-pptx", "easyocr", "pdf2docx", "pypdf", "pypdfium2", "rarfile"
]

[tool.poetry.scripts]
# CLI entry points
rag-convert = "file_conversion_router.api:convert_files"
rag-embed = "file_conversion_router.embedding_create:main"
rag-process = "file_conversion_router.api:process_pipeline"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | outputs
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E722",  # bare except (common in ML code)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/conversion/*" = ["E722"]  # Allow bare except in conversion code

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Ignore missing stubs for ML packages
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "FlagEmbedding.*",
    "cv2.*",
    "paddleocr.*",
    "magic_pdf.*",
    "albumentations.*",
    "moviepy.*",
    "scenedetect.*",
    "playwright.*",
    "selenium.*",
    "spacy.*",
    "nltk.*",
    "easyocr.*",
    "rapidocr.*",
    "pix2text.*",
    "cnocr.*",
    "cnstd.*",
    "unimernet.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "cv: marks tests requiring computer vision packages",
    "ocr: marks tests requiring OCR packages",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["file_conversion_router"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]