# Backend Component Configuration
# This file specifies backend-specific dependencies for documentation purposes.
# Actual installation happens from the root monorepo pyproject.toml.
# Use 'make install' from this directory to install all dependencies to root .venv

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-course-bot-backend"
version = "0.1.0"
description = "FastAPI backend service for TAI course assistant with RAG capabilities"
authors = ["TAI Team"]
readme = "README.md"
packages = [{include = "app"}]

# Component-specific dependencies (for documentation)
# These are included in the root monorepo pyproject.toml
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core backend dependencies
fastapi = "*"
uvicorn = "*"
starlette = "*"
pydantic = "*"
pydantic-settings = "*"

# Database
sqlalchemy = "*"
sqlite-vss = "*"

# AI/ML for backend
FlagEmbedding = "*"
torch = "*"
transformers = "*"
openai = "*"

# Authentication
PyJWT = "*"
itsdangerous = "*"
google-auth = "*"
google-auth-oauthlib = "*"

# Admin interface
sqladmin = "*"

# Utilities
cachetools = "*"
python-dotenv = "*"
jsonschema = "*"
watchdog = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
# Development tools used by backend
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-xdist = "*"
httpx = "*"
black = "*"
ruff = "*"
mypy = "*"
ipython = "*"

[tool.poetry.scripts]
# Entry point for this component
tai-backend = "main:main"

# Component-specific tool configurations
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
]
