# File Organizer Component Configuration
# This file specifies file organizer-specific dependencies for documentation purposes.
# Actual installation happens from the root monorepo pyproject.toml.
# Use 'make install' from this directory to install all dependencies to root .venv

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "file-organizer"
version = "0.1.0"
description = "ML-based file classification and organization tool"
authors = ["TAI Team"]
readme = "README.md"
packages = [{include = "src"}]

# Component-specific dependencies (for documentation)
# These are included in the root monorepo pyproject.toml
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core ML dependencies
torch = "*"
transformers = "*"
sentence-transformers = "*"
scikit-learn = "*"
numpy = "*"

# File processing
python-docx = "*"
openpyxl = "*"
PyMuPDF = "*"
Pillow = "*"

# NLP
spacy = "*"
nltk = "*"

# Utilities
click = "*"
rich = "*"
loguru = "*"
PyYAML = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
# Development tools
pytest = "*"
black = "*"
ruff = "*"
mypy = "*"

[tool.poetry.scripts]
# Entry point for this component
file-organizer = "src.organizer:organize_command"

# Component-specific tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
